<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_ma_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/ingredients"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ma_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:text="@string/sol_name"/>

        <TextView
            android:id="@+id/tv_ma_conc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:text="@string/sol_conc"/>

        <TextView
            android:id="@+id/tv_ma_vol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:text="@string/sol_vol"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/ch_ma_sol1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                android:enabled="false"
                android:visibility="invisible"
                tools:visibility="visible"
                />

            <EditText
                android:id="@+id/et_ma_sol1_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ch_ma_sol1"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol1_conc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                />

            <EditText
                android:id="@+id/et_ma_sol1_conc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol1_conc"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol1_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                />

            <EditText
                android:id="@+id/et_ma_sol1_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol1_vol"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/ch_ma_sol2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                android:enabled="false"
                android:visibility="invisible"
                tools:visibility="visible"
                />

            <EditText
                android:id="@+id/et_ma_sol2_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ch_ma_sol2"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol2_conc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                />

            <EditText
                android:id="@+id/et_ma_sol2_conc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol2_conc"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol2_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                />

            <EditText
                android:id="@+id/et_ma_sol2_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol2_vol"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/ch_ma_sol3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="false"
                />

            <EditText
                android:id="@+id/et_ma_sol3_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ch_ma_sol3"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol3_conc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_ma_sol3_conc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol3_conc"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol3_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_ma_sol3_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol3_vol"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/ch_ma_sol4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="false"
                />

            <EditText
                android:id="@+id/et_ma_sol4_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ch_ma_sol4"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol4_conc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_ma_sol4_conc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol4_conc"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol4_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_ma_sol4_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol4_vol"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/ch_ma_sol5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="false"
                />

            <EditText
                android:id="@+id/et_ma_sol5_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ch_ma_sol5"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol5_conc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_ma_sol5_conc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol5_conc"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_sol5_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_ma_sol5_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_sol5_vol"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_ma_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:text="@string/result"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/ch_ma_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                android:enabled="false"
                android:visibility="invisible"
                tools:visibility="visible"
                />

            <EditText
                android:id="@+id/et_ma_result_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ch_ma_result"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_result_conc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_ma_result_conc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_result_conc"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/sw_ma_result_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_ma_result_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sw_ma_result_vol"
                android:inputType="numberDecimal"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_ma_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_all_black_24dp"
        android:onClick="calculate"
        />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad_ma_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_ma_unit_id"
        />

</LinearLayout>